demos/spiffe-cross-boundary/cluster/retail/authz.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  namespace: mixed-env
  name: store-pos-allow-cloud
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: store-pos-http
  requiredAuthenticationRefs:
    - name: allow-retail-cloud
      kind: MeshTLSAuthentication
      group: policy.linkerd.io
